<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/timeLeftEt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/timeHintLeft"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:id="@+id/timeRightEt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/timeHintRight"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/buttons_color"
        android:onClick="add"
        android:text="@string/leftBTN"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/timeLeftEt"
        app:layout_constraintStart_toStartOf="@id/timeLeftEt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/buttons_color"
        android:onClick="sub"
        android:text="@string/rightBTN"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/timeRightEt"
        app:layout_constraintStart_toStartOf="@id/timeRightEt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:logo="@drawable/calculator_logo"
        app:subtitle="@string/subtitle"
        app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:subtitleTextColor="@color/black"
        app:title="@string/Title"
        app:titleMarginStart="30dp" />
</androidx.constraintlayout.widget.ConstraintLayout>